[package]
name = "brainfreak"
description = "A simple compiler for the Brainf*ck programming language"
version = "0.1.0-alpha"
license = "MIT"
homepage = "https://github.com/pzipper/brainfreak"
repository = "https://github.com/pzipper/brainfreak"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
cranelift = "0.103.0"
cranelift-module = "0.103.0"
cranelift-native = "0.103.0"
cranelift-object = "0.103.0"
